land complete added header and footer

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -14,8 +14,40 @@ body,
 }
 @import "tailwindcss/tailwind.css";
 
-.glass {
+/* .glass {
   background: rgba(255, 255, 255, 0.1);
   backdrop-filter: blur(10px);
   border: 1px solid rgba(255, 255, 255, 0.18);
+} */
+/* For WebKit browsers (Chrome, Safari) */
+::-webkit-scrollbar {
+  width: 12px;
+}
+
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #888;
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
+
+/* For Firefox */
+html {
+  scrollbar-width: thin;
+  scrollbar-color: #888 #f1f1f1;
+}
+
+.carddd {
+  backdrop-filter: blur(14px) saturate(103%);
+  -webkit-backdrop-filter: blur(14px) saturate(103%);
+  background-color: rgba(17, 25, 40, 0.07);
+  border-radius: 12px;
+  border: 1px solid rgba(255, 255, 255, 0.125);
 }
