--- a/frontend/src/utils/Landing/custom.css
+++ b/frontend/src/utils/Landing/custom.css
@@ -7,3 +7,10 @@
     @apply absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2;
   }
 }
+
+.bg-image {
+  background-image: url('https://www.603thecoworkingspace.com/wp-content/uploads/2023/08/slide1.png');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+}
